WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23975
REGRESSION: Scrollbar arrow not repainted
https://bugs.webkit.org/show_bug.cgi?id=23975
Summary
REGRESSION: Scrollbar arrow not repainted
John Moe
Reported
2009-02-16 11:07:26 PST
Click the down arrow in the News Update section. It stays blue.
Attachments
reduction, as best as I can get it
(597 bytes, text/html)
2009-02-16 12:10 PST
,
Gavin Sherlock
no flags
Details
Correct the vertical scrollbar rect calculation in RenderLayer::invalidateScrollbarRect()
(1.36 KB, patch)
2009-03-09 23:56 PDT
,
mitz
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Sherlock
Comment 1
2009-02-16 11:26:10 PST
This is a regression from 3.2.1, and should be marked as such. Note, resizing the window, or unfocusing then refocusing the window (such as by application switching) causes it to paint correctly.
Gavin Sherlock
Comment 2
2009-02-16 11:33:52 PST
regressed between
r40663
(good) and
r40738
(bad)
Gavin Sherlock
Comment 3
2009-02-16 12:10:47 PST
Created
attachment 27706
[details]
reduction, as best as I can get it
Alexey Proskuryakov
Comment 4
2009-02-17 00:31:25 PST
<
rdar://problem/6593610
>
mitz
Comment 5
2009-03-09 18:01:22 PDT
Smaller reduction: <div style="height: 100px; overflow-y: scroll;"><div style="height: 120px;"></div></div>
mitz
Comment 6
2009-03-09 23:56:32 PDT
Created
attachment 28430
[details]
Correct the vertical scrollbar rect calculation in RenderLayer::invalidateScrollbarRect()
mitz
Comment 7
2009-03-10 00:05:22 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/41546
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug