        Reviewed by Adele Peterson.

- fix https://bugs.webkit.org/show_bug.cgi?id=23975
          <rdar://problem/6593610> REGRESSION: Scrollbar arrow not repainted

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::invalidateScrollbarRect): Corrected the vertical
        scrollbar rect calculation.



Canonical link: https://commits.webkit.org/33612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41546 268f45cc-cd09-0410-ab3c-d52691b4dbfc